# CrawlerTutorial

./: README.md  crawler_3.py  crawler_4.py  crawling.md  utils.py
ptt-parser/: README.md  main.py  setup.cfg  setup.py
ptt-parser/ptt/: __init__.py  cli.py  core.py  model.py  parser.py
ptt-parser/test/: test_core.py  test_example.py  test_search.py
src/: basic_crawler.py  crawler_1.py  crawler_2.py  crawler_4.py  crawler_5.py  crawler_6.py  crawler_7.py  crawler_8.py  crawler_multiprocess.py
src/_soup-based/: crawler_4.py  crawler_5.py  crawler_6.py  crawler_7.py  crawler_8.py
src/make_it_as_class/: crawler_5.py  crawler_6.py  crawler_7.py  crawler_8.py
