[metadata]
name = ptt-spider
version = attr: ptt.__VERSION__
author = Salas leVirve
author-email = gae.m.project@gmail.com
summary = A spider API toolkit for PTT bbs and also a self-tutorial.
license = MIT
long_description = file: README.md
home-page = https://github.com/leVirve/CrawlerTutorial
classifier =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.6

[options.entry_points]
console_scripts =
    ptt = ptt.cli:main

[options]
packages = find:
setup_requires = requests; requests_html
install_requires = requests; requests_html
